<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.peluzo.agenda.ConfirmarDatos">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_confirmar"
        android:textSize="@dimen/tamano_texto_confirmar"
        android:textAlignment="center"
    />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pnombre"
        android:textSize="@dimen/tamano_texto"
        />

    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pfecha"
        android:textSize="@dimen/tamano_texto"
        />

    <TextView
        android:id="@+id/tv_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ptelefono"
        android:textSize="@dimen/tamano_texto"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcorreo"
        android:textSize="@dimen/tamano_texto"
        />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdesc"
        android:textSize="@dimen/tamano_texto"
        />

    <LinearLayout
        android:id="@+id/botonatras"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMiBoton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton_editar"
            android:theme="@style/MiBotonRaised"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

    </LinearLayout>
</LinearLayout>
